added url video field
