# app/controllers/api/v1/videos_controller.rb
@@ -1,10 +1,18 @@
 class Api::V1::VideosController < ApplicationController
   before_action :set_video, only: [:show, :update, :destroy]
+  before_action :authenticate_user!, except: [:index]
+
 
   # GET /videos
   def index
     @videos = Video.all
 
+    render json: @videos
+  end
+
+  def my_videos
+
+    @videos = current_user.videos
     render json: @videos
   end
 
@@ -16,6 +24,7 @@ class Api::V1::VideosController < ApplicationController
   # POST /videos
   def create
     @video = Video.new(video_params)
+    @video.user = current_user
 
     if @video.save
       render json: @video, status: :created, location: @video
@@ -46,6 +55,6 @@ class Api::V1::VideosController < ApplicationController
 
     # Only allow a trusted parameter "white list" through.
     def video_params
-      params.require(:video).permit(:title, :description, :youtube_video_id, :video_code, :user_id, :upload_date)
+      params.require(:video).permit(:title, :description, :youtube_video_id, :video_url, :video_code, :user_id, :upload_date)
     end
 end
